fix(env): debug

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -112,6 +112,9 @@ jobs:
           echo "[all]" > ${{ inputs.inventory_file }}
           echo "${{ steps.tf-output.outputs.INSTANCE_IP }}" >> ${{ inputs.inventory_file }}
 
+      - name: Debug BACKEND_ENV_B64
+        run: echo ${{ secrets.BACKEND_ENV_B64 }} | head -c 50
+
       - name: Run Ansible playbook to deploy containers
         working-directory: ${{ inputs.ansible_dir }}
         run: |
