--- a/.github/workflows/change-detect.yml
+++ b/.github/workflows/change-detect.yml
@@ -31,37 +31,27 @@ jobs:
             next-frontend: next-frontend/**
 
       - id: set-matrix
-        env:
-          FILTER_ANDROID_KOTLIN: ${{ steps.filter.outputs.android-kotlin }}
-          FILTER_SPRING_BACKEND: ${{ steps.filter.outputs.spring-backend }}
-          FILTER_LLM_BACKEND: ${{ steps.filter.outputs.llm-backend }}
-          FILTER_NEXT_FRONTEND: ${{ steps.filter.outputs.next-frontend }}
-          FORCE_ALL: true
         run: |
           folders=()
+          if [ "${{ steps.filter.outputs.android-kotlin }}" = "true" ]; then folders+=("android-kotlin"); fi
+          if [ "${{ steps.filter.outputs.spring-backend }}" = "true" ]; then folders+=("spring-backend"); fi
+          if [ "${{ steps.filter.outputs.llm-backend }}" = "true" ]; then folders+=("llm-backend"); fi
+          if [ "${{ steps.filter.outputs.next-frontend }}" = "true" ]; then folders+=("next-frontend"); fi
 
-          if [[ "$FORCE_ALL" == "true" ]]; then
-            folders+=("android-kotlin" "spring-backend" "llm-backend" "next-frontend")
-          else
-            declare -A envMap=(
-              ["android-kotlin"]="${FILTER_ANDROID_KOTLIN}"
-              ["spring-backend"]="${FILTER_SPRING_BACKEND}"
-              ["llm-backend"]="${FILTER_LLM_BACKEND}"
-              ["next-frontend"]="${FILTER_NEXT_FRONTEND}"
-            )
-
-            for folder in "${!envMap[@]}"; do
-              if [[ "${envMap[$folder]}" == "true" ]]; then
-                folders+=("$folder")
-              fi
-            done
+          # If FORCE_ALL is true and no folders found, include all folders
+          if [ "${FORCE_ALL}" = "true" ] && [ ${#folders[@]} -eq 0 ]; then
+            folders=("android-kotlin" "spring-backend" "llm-backend" "next-frontend")
           fi
 
-          if [ ${#folders[@]} -eq 0 ]; then
-            echo "matrix=[]" >> "$GITHUB_OUTPUT"
-            echo "hasChanges=false" >> "$GITHUB_OUTPUT"
+          # Convert bash array to JSON array string
+          matrix=$(printf '%s\n' "${folders[@]}" | jq -R . | jq -s .)
+
+          # Set outputs for matrix and hasChanges
+          echo "matrix=$matrix" >> $GITHUB_OUTPUT
+          if [ ${#folders[@]} -gt 0 ]; then
+            echo "hasChanges=true" >> $GITHUB_OUTPUT
           else
-            matrix_json=$(printf '%s\n' "${folders[@]}" | jq -R . | jq -s '.')
-            echo "matrix=$matrix_json" >> "$GITHUB_OUTPUT"
-            echo "hasChanges=true" >> "$GITHUB_OUTPUT"
+            echo "hasChanges=false" >> $GITHUB_OUTPUT
           fi
+        env:
+          FORCE_ALL: true
