--- a/android-kotlin/feature_navigateBar/src/main/AndroidManifest.xml
+++ b/android-kotlin/feature_navigateBar/src/main/AndroidManifest.xml
@@ -8,6 +8,12 @@
         <activity
             android:name=".ChangePasswordActivity"
             android:exported="false" />
+        <activity
+            android:name=".AboutUsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".FAQActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
