--- a/.github/workflows/dockerize.yml
+++ b/.github/workflows/dockerize.yml
@@ -14,12 +14,11 @@ on:
         required: true
 
 jobs:
-  dockerize:
+  build_and_push_frontend:
     runs-on: ubuntu-latest
     env:
       IMAGE_TAG: ${{ inputs.image_tag }}
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-
     steps:
       - uses: actions/checkout@v4
 
@@ -41,6 +40,23 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
+  build_and_push_backend:
+    runs-on: ubuntu-latest
+    env:
+      IMAGE_TAG: ${{ inputs.image_tag }}
+      DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Log in to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
       - name: Build & Push Backend
         uses: docker/build-push-action@v5
         with:
@@ -50,5 +66,11 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
+  show_image_summary:
+    runs-on: ubuntu-latest
+    needs:
+      - build_and_push_frontend
+      - build_and_push_backend
+    steps:
       - name: Show pushed image summary
         run: docker images --format "table {{.Repository}}\t{{.Tag}}\t{{.Size}}"
