fix: add env to gitignore

--- a/spring-backend/src/main/resources/application.properties
+++ b/spring-backend/src/main/resources/application.properties
@@ -7,6 +7,8 @@ debug=true
 logging.level.reactor.netty.http.client.HttpClient=DEBUG
 logging.level.io.netty.handler.codec.http=DEBUG
 logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.boot.autoconfigure.condition.ConditionEvaluationReportLoggingListener=OFF
+
 
 # Application
 spring.application.name=spring-backend
