--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -3,6 +3,10 @@ on:
   push:
     branches: [main, dev, staging, test/ci-deploy]
 
+permissions:
+  contents: read
+  issues: write
+
 jobs:
   dockerize:
     uses: ./.github/workflows/dockerize.yml
