--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -133,9 +133,4 @@ jobs:
           target: "http://${{ steps.tf-output.outputs.INSTANCE_IP }}"
           token: ${{ secrets.GITHUB_TOKEN }}
           fail_action: false
-
-      - name: Upload ZAP Report
-        uses: actions/upload-artifact@v4
-        with:
-          name: zap-report
-          path: zap_report.html
+          artifact_name: zap-report
