--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -30,3 +30,15 @@ jobs:
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
       DEPLOY_SSH_KEY: ${{ secrets.DEPLOY_SSH_KEY }}
       BACKEND_ENV_B64: ${{ secrets.BACKEND_ENV_B64 }}
+
+  dast:
+    needs: deploy
+    runs-on: ubuntu-latest
+    steps:
+      - name: Run OWASP ZAP Baseline Scan
+        uses: zaproxy/action-baseline@v0.9.0
+        with:
+          target: "http://${{ needs.deploy.outputs.instance_ip }}" # Pass the IP from deploy
+          token: ${{ secrets.GITHUB_TOKEN }}
+          fail_action: false
+          artifact_name: zap-report
