--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Run OWASP ZAP Baseline Scan
         uses: zaproxy/action-baseline@v0.9.0
         with:
-          target: "http://${{ needs.deploy.outputs.instance_ip }}" # Pass the IP from deploy
+          target: "http://${{ needs.deploy.outputs.instance_ip }}"
           token: ${{ secrets.GITHUB_TOKEN }}
           fail_action: false
           artifact_name: zap-report
