--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -31,13 +31,12 @@ jobs:
       DEPLOY_SSH_KEY: ${{ secrets.DEPLOY_SSH_KEY }}
       BACKEND_ENV_B64: ${{ secrets.BACKEND_ENV_B64 }}
 
-  dast:
+  dast-scan:
     needs: deploy
     runs-on: ubuntu-latest
     steps:
       - name: Run OWASP ZAP Baseline Scan
-        uses: zaproxy/action-baseline@v0.12.0
+        uses: zaproxy/action-baseline@v0.14.0
         with:
           target: "http://${{ needs.deploy.outputs.instance_ip }}"
           token: ${{ secrets.GITHUB_TOKEN }}
-          fail_action: false
