--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,5 @@
 name: Build
+
 on:
   workflow_call:
     inputs:
@@ -7,83 +8,98 @@ on:
         type: string
 
 jobs:
-  build:
+  validate:
     runs-on: ubuntu-latest
-    env:
-      FOLDER: ${{ inputs.folder }}
-
+    outputs:
+      folder: ${{ steps.validate.outputs.folder }}
     steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Set up environment and build $FOLDER
+      - name: ✅ Validate Folder
+        id: validate
         run: |
-          cd $FOLDER
-          case "$FOLDER" in
-            next-frontend)
-              echo "Setting up Node.js"
-              ;;
-            spring-backend)
-              echo "Setting up Java"
-              ;;
-            android-kotlin)
-              echo "Setting up Java for Android"
-              ;;
-            llm-backend)
-              echo "Setting up Python"
+          case "${{ inputs.folder }}" in
+            next-frontend|spring-backend|android-kotlin|llm-backend)
+              echo "folder=${{ inputs.folder }}" >> "$GITHUB_OUTPUT"
               ;;
             *)
-              echo "Unknown folder $FOLDER"
+              echo "Invalid folder: ${{ inputs.folder }}"
               exit 1
               ;;
           esac
 
-      # Setup environments per folder
+  next-frontend:
+    if: needs.validate.outputs.folder == 'next-frontend'
+    needs: validate
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
 
-      - name: Setup Node.js (next-frontend)
-        if: env.FOLDER == 'next-frontend'
+      - name: 📦 Setup Node.js
         uses: actions/setup-node@v3
         with:
+          node-version: 20
           cache: npm
 
-      - name: Setup Java (spring-backend & android-kotlin)
-        if: env.FOLDER == 'spring-backend' || env.FOLDER == 'android-kotlin'
+      - name: 🔧 Build Next.js App
+        run: |
+          cd next-frontend
+          npm ci
+          npm run build
+
+  spring-backend:
+    if: needs.validate.outputs.folder == 'spring-backend'
+    needs: validate
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: ☕ Setup Java
         uses: actions/setup-java@v3
         with:
           distribution: temurin
           java-version: 17
           cache: maven
 
-      - name: Setup Python (llm-backend)
-        if: env.FOLDER == 'llm-backend'
+      - name: 🔧 Build Spring Backend
+        run: |
+          cd spring-backend
+          chmod +x mvnw
+          ./mvnw clean verify -DskipTests
+
+  android-kotlin:
+    if: needs.validate.outputs.folder == 'android-kotlin'
+    needs: validate
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: ☕ Setup Java
+        uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version: 17
+          cache: gradle
+
+      - name: 🔧 Build Android App
+        run: |
+          cd android-kotlin
+          chmod +x gradlew
+          ./gradlew assembleRelease
+
+  llm-backend:
+    if: needs.validate.outputs.folder == 'llm-backend'
+    needs: validate
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: 🐍 Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: 3.x
           cache: pip
 
-      - name: Build (next-frontend)
-        if: env.FOLDER == 'next-frontend'
+      - name: 🔧 Install Dependencies & Build
         run: |
-          cd $FOLDER
-          npm ci
-          npm run build
-
-      - name: Build (spring-backend)
-        if: env.FOLDER == 'spring-backend'
-        run: |
-          cd $FOLDER
-          ./mvnw clean verify -DskipTests
-
-      - name: Build (android-kotlin)
-        if: env.FOLDER == 'android-kotlin'
-        run: |
-          cd $FOLDER
-          ./gradlew assembleRelease
-
-      - name: Build (llm-backend)
-        if: env.FOLDER == 'llm-backend'
-        run: |
-          cd $FOLDER
+          cd llm-backend
           pip install -r requirements.txt
-          # Add build commands if needed
+          # Add any build step if required
