fix: return null if jwtToken is expired

--- a/spring-backend/src/main/resources/application.properties
+++ b/spring-backend/src/main/resources/application.properties
@@ -7,7 +7,7 @@ debug=true
 logging.level.reactor.netty.http.client.HttpClient=DEBUG
 logging.level.io.netty.handler.codec.http=DEBUG
 logging.level.org.springframework.security=DEBUG
-logging.level.org.springframework.boot.autoconfigure.condition.ConditionEvaluationReportLoggingListener=OFF
+logging.level.org.springframework.boot.autoconfigure.logging.ConditionEvaluationReportLogger=INFO
 
 
 # Application
