fix: update pmd rulesets + make ci deploy trigger on test branches

--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -1,7 +1,7 @@
 name: Push CD Pipeline
 on:
   push:
-    branches: [main, dev, staging, test/ci-deploy]
+    branches: [main, dev, staging, test/**]
 
 permissions:
   contents: read
