--- a/spring-backend/src/main/resources/application.properties
+++ b/spring-backend/src/main/resources/application.properties
@@ -10,6 +10,9 @@ logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.boot.autoconfigure.logging.ConditionEvaluationReportLogger=INFO
 
 
+management.endpoints.web.exposure.include=health,prometheus
+management.endpoint.health.show-details=always
+
 # Application
 spring.application.name=spring-backend
 server.port=8080
