--- a/infra/ansible/playbook.yml
+++ b/infra/ansible/playbook.yml
@@ -4,6 +4,7 @@
     image_tag: "{{ image_tag }}"
     docker_username: "{{ docker_username }}"
     backend_env_b64: "{{ backend_env_b64 }}"
+    aws_server_ip: "{{ aws_server_ip }}"
 
   tasks:
     - name: Check if Docker is installed
