--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -138,10 +138,10 @@ jobs:
         run: |
           ansible-playbook -i ${{ inputs.inventory_file }} playbook.yml \
             --private-key ../../private_key.pem -u ubuntu \
-            --extra-vars "BACKEND_ENV_B64='${{ secrets.BACKEND_ENV_B64 }}' \
-            IMAGE_TAG='${{ inputs.image_tag }}' \
-            DOCKER_USERNAME='${{ secrets.DOCKER_USERNAME }}' \
-            AWS_SERVER_IP='${{ steps.tf-output.outputs.INSTANCE_IP }}"
+            --extra-vars "backend_env_b64='${{ secrets.BACKEND_ENV_B64 }}' \
+            image_tag='${{ inputs.image_tag }}' \
+            docker_username='${{ secrets.DOCKER_USERNAME }}' \
+            aws_server_ip='${{ steps.tf-output.outputs.INSTANCE_IP }}'"
         env:
           ANSIBLE_HOST_KEY_CHECKING: False
 
