--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,11 @@ jobs:
               npm ci && npm test
               ;;
             spring-backend)
-              ./mvnw test
+              ./mvnw clean verify \
+                -Pcoverage \
+                org.jacoco:jacoco-maven-plugin:prepare-agent \
+                surefire:test \
+                org.jacoco:jacoco-maven-plugin:report
               ;;
             android-kotlin)
               ./gradlew test
@@ -29,3 +33,10 @@ jobs:
               pip install -r requirements.txt && pytest
               ;;
           esac
+
+      - name: Upload JaCoCo Report
+        if: ${{ inputs.folder == 'spring-backend' }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: jacoco-report
+          path: ${{ inputs.folder }}/target/site/jacoco
