--- a/infra/ansible/files/prometheus.yml
+++ b/infra/ansible/files/prometheus.yml
@@ -3,7 +3,7 @@ global:
 
 scrape_configs:
   - job_name: "spring-backend"
-    metrics_path: "/api/actuator/prometheus"
+    metrics_path: "/actuator/prometheus"
     static_configs:
       - targets: ["backend:8080"]
 
