--- a/infra/ansible/files/nginx.conf
+++ b/infra/ansible/files/nginx.conf
@@ -12,18 +12,23 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
+    
+    location = /prometheus {
+        return 301 /prometheus/;
+    }
 
     location /prometheus/ {
         proxy_pass http://prometheus:9090/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
-        rewrite ^/prometheus(/.*)$ $1 break;
+    }
+    location = /grafana {
+        return 301 /grafana/;
     }
 
     location /grafana/ {
         proxy_pass http://grafana:3000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
-        rewrite ^/grafana(/.*)$ $1 break;
     }
 }
