--- a/infra/ansible/files/prometheus.yml
+++ b/infra/ansible/files/prometheus.yml
@@ -9,4 +9,4 @@ scrape_configs:
 
   - job_name: "prometheus"
     static_configs:
-      - targets: ["localhost:9090"]
+      - targets: ["prometheus:9090"]
