--- a/infra/ansible/files/nginx.conf
+++ b/infra/ansible/files/nginx.conf
@@ -12,7 +12,7 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
-    
+
     location = /prometheus {
         return 301 /prometheus/;
     }
@@ -21,14 +21,19 @@ server {
         proxy_pass http://prometheus:9090/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_redirect off;
+        proxy_set_header X-Forwarded-Prefix /prometheus;
     }
+
     location = /grafana {
         return 301 /grafana/;
     }
+
 
     location /grafana/ {
         proxy_pass http://grafana:3000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_redirect off;
+        proxy_set_header X-Forwarded-Prefix /grafana;
     }
-}
