--- a/infra/ansible/files/nginx.conf
+++ b/infra/ansible/files/nginx.conf
@@ -1,39 +1,37 @@
 server {
     listen 80;
-
+    
     location / {
         proxy_pass http://frontend:3000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
-
+    
     location /api/ {
         proxy_pass http://backend:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
-
+    
     location = /prometheus {
         return 301 /prometheus/;
     }
-
+    
     location /prometheus/ {
         proxy_pass http://prometheus:9090/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_redirect off;
-        proxy_set_header X-Forwarded-Prefix /prometheus;
     }
-
+    
     location = /grafana {
         return 301 /grafana/;
     }
-
-
+    
     location /grafana/ {
         proxy_pass http://grafana:3000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_redirect off;
-        proxy_set_header X-Forwarded-Prefix /grafana;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
+}
