fix(grafana): rewrite

--- a/infra/ansible/files/nginx.conf
+++ b/infra/ansible/files/nginx.conf
@@ -28,10 +28,18 @@ server {
     }
     
     location /grafana/ {
-        proxy_pass http://grafana:3000/;
+        # Remove trailing slash from proxy_pass
+        proxy_pass http://grafana:3000;
+        
+        # Essential headers for Grafana subpath
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port $server_port;
+        
+        # Important: Rewrite the path
+        rewrite ^/grafana/(.*)$ /$1 break;
     }
 }
