--- a/infra/ansible/files/nginx.conf
+++ b/infra/ansible/files/nginx.conf
@@ -27,19 +27,26 @@ server {
         return 301 /grafana/;
     }
     
+    # Main Grafana location block
     location /grafana/ {
-        # Remove trailing slash from proxy_pass
-        proxy_pass http://grafana:3000;
-        
-        # Essential headers for Grafana subpath
-        proxy_set_header Host $host;
+        rewrite ^/grafana/(.*)$ /$1 break;
+        proxy_set_header Host $http_host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Port $server_port;
-        
-        # Important: Rewrite the path
+        proxy_pass http://grafana;
+    }
+    
+    # Proxy Grafana Live WebSocket connections
+    location /grafana/api/live/ {
         rewrite ^/grafana/(.*)$ /$1 break;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_pass http://grafana;
     }
 }
