--- a/infra/ansible/files/nginx.conf
+++ b/infra/ansible/files/nginx.conf
@@ -3,10 +3,6 @@ map $http_upgrade $connection_upgrade {
   '' close;
 }
 
-upstream grafana {
-    server grafana:3000;  
-}
-
 server {
     listen 80;
     
@@ -38,24 +34,16 @@ server {
     
     # Main Grafana location block
     location /grafana/ {
-        rewrite ^/grafana/(.*)$ /$1 break;
         proxy_set_header Host $http_host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_pass http://grafana;
+        proxy_pass http://grafana:3000/grafana/;
     }
     
     # Proxy Grafana Live WebSocket connections
     location /grafana/api/live/ {
-        rewrite ^/grafana/(.*)$ /$1 break;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
         proxy_set_header Host $http_host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_pass http://grafana;
+        proxy_pass http://grafana:3000/grafana/;
     }
 }
