--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -2,9 +2,8 @@
 name: Lint
 
 on: # yamllint disable-line rule:truthy
-  push: null
-  pull_request: null
-
+  pull_request:
+    branches: [main, dev]
 permissions: {}
 
 jobs:
