--- a/next-frontend/package.json
+++ b/next-frontend/package.json
@@ -5,9 +5,7 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix"
+    "start": "next start"
   },
   "dependencies": {
     "react": "19.1.1",
@@ -20,17 +18,6 @@
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9.32.0",
-    "eslint-config-next": "15.4.5",
-    "@eslint/eslintrc": "^3",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-security": "^3.0.1",
-    "eslint-plugin-unused-imports": "^4.1.4",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-config-prettier": "^10.1.8",
-    "prettier": "^3.6.2",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react": "^7.33.2"
+    "tailwindcss": "^4"
   }
 }
