--- a/next-frontend/package.json
+++ b/next-frontend/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "echo \"No tests yet\" && exit 0"
   },
   "dependencies": {
     "react": "19.1.1",
