--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -88,7 +88,7 @@ jobs:
         run: |
           cd spring-backend
           chmod +x ./mvnw
-          ./mvnw clean test
+          ./mvnw clean test -X
 
       - name: 🏗️ Package Application
         run: |
