fix: fix flapdoodle version

--- a/spring-backend/src/main/resources/application-test.properties
+++ b/spring-backend/src/main/resources/application-test.properties
@@ -1,3 +1,5 @@
+de.flapdoodle.mongodb.embedded.version=4.0.2
+
 # Other test environment variables
 onemap.base-url=http://fake-onemap.test
 onemap.token=fake-token
@@ -13,4 +15,4 @@ chatbot.strategy=proxy
 logging.level.org.springframework.boot.autoconfigure.mongo.embedded=WARN
 logging.level.de.flapdoodle.embed.mongo=WARN
 logging.level.org.springframework.data.mongodb.core.ReactiveMongoTemplate=DEBUG
-logging.level.org.springframework.boot.autoconfigure.logging.ConditionEvaluationReportLogger=OFF
+logging.level.org.springframework.boot.autoconfigure.logging=INFO
